--- a/Mini Project/Code.ipynb
+++ b/Mini Project/Code.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NAME:** Sumedha Nitin Zaware\n",
+    "**NAME:** Faraz Pathan\n",
     "\n",
-    "**ROLL NO.:** BECOC342\n",
+    "**ROLL NO.:** BB08\n",
     "\n",
     "**MACHINE LEARNING(LP-3) MINI PROJECT**\n",
     "\n",
